--- a/src/sass/common.scss
+++ b/src/sass/common.scss
@@ -8,7 +8,7 @@ body {
   margin: 0;
   width: 100%;
   height: 100%;
-  background-color: whitesmoke;
+  background-color: #8abfff;
 }
 
 main {
@@ -16,4 +16,18 @@ main {
   flex-flow: row wrap;
   justify-content: center;
   align-items: center;
+  margin: 20% auto;
+
+  img {
+    opacity: 0;
+  }
+}
+
+@keyframes animate-logo {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
+}
+
+.animate-logo {
+  animation: animate-logo 1.5s 1s forwards;
 }
