--- a/{{cookiecutter.project_name}}/src/sass/common.scss
+++ b/{{cookiecutter.project_name}}/src/sass/common.scss
@@ -1,3 +1,6 @@
+/**
+ * Created by {{cookiecutter.author}} {% now 'utc' %}.
+ */
 * {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 300;
